[project]
name = "DNN"
version = "0.0.1"
authors = [
  { name="Albert Lin", email="albertlin2468@gmail.com" },
]
description = "A small example package of DNN supporting feadfoward only FNN"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlbertDoggyLin/DNN"
"Bug Tracker" = "https://github.com/AlbertDoggyLin/DNN/issues"